# shared-mime-info

./: .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  ChangeLog  ChangeLog.pre-git  HACKING  HACKING.md  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.ac  configure.in  freedesktop-shared.mimeinfo  freedesktop.org.xml  freedesktop.org.xml.in  meson.build  meson_options.txt  mime-info.its  shared-mime-info-spec.xml  test-tree-magic.c  update-mime-database.1  update-mime-database.c
.tx/: config
data/: freedesktop.org.xml.in  freedesktop_generate.sh  meson.build  shared-mime-info-spec.xml  update-mime-database.1
mime-db-tests/: .gitignore
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bg_BG.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fa_IR.po  fi.po  fo.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  (+50 more)
src/: update-mime-database.c
tests/: Oriental_tattoo_by_daftpunk22.eps  compare-iana.py  compare_iana.py  elizabeth-barrett-browning_sonnets-from-the-portuguese.azw3  evo.msg  list  m64p_test_rom.n64  meson.build  neo-geo-pocket-test.ngp  registry.reg  sample.pot  sample.ppt  sample.xls  test.avf  test_case.py  test_duplicate_mime_types.sh  test_staging.sh  test_sub_class_ofs.py  tree-list
tests/mime-detection/: 4jsno.669  TS010082249.pub  break.mtm  list  raw-mjpeg.mjpeg  serafettin.rar  test.key
