AC_INIT([shared-mime-info],[0.23],[https://bugs.freedesktop.org/enter_bug.cgi?product=shared-mime-info])

AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2 check-news])

AC_CONFIG_HEADERS([config.h])

dnl Checks for programs.
AC_PROG_CC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST


IT_PROG_INTLTOOL([0.35.0])

GETTEXT_PACKAGE=shared-mime-info
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

dnl Check pkg-config is installed
PKG_CHECK_MODULES(ALL, \
		  libxml-2.0 >= 2.4 \
                  glib-2.0 >= 2.3.2)
AC_SUBST(ALL_CFLAGS)
AC_SUBST(ALL_LIBS)

dnl Use -Wall, etc if possible
[
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall -Wstrict-prototypes -Wmissing-prototypes -Wwrite-strings" ;;
  esac
fi
]
	
AC_ARG_ENABLE(update-mimedb,
   AC_HELP_STRING([--disable-update-mimedb],
                   [disable the update-mime-database after install [default=no]]),,
    enable_update_mimedb=yes)
AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)

AC_PATH_PROG([XMLLINT],[xmllint])

AC_CONFIG_FILES([
Makefile
shared-mime-info.pc
po/Makefile.in
])

AC_OUTPUT
